# gamjectfolder

./: AUTHORS  CHANGELOG.md  README.md  README.txt  application.py  gjfGUI.glade  makefolders.py  makereadme.py  meson.build  org.gnome.Gamjectfolder.json
data/: meson.build  org.gnome.Gamjectfolder.appdata.xml.in  org.gnome.Gamjectfolder.desktop.in  org.gnome.Gamjectfolder.gschema.xml
po/: LINGUAS  POTFILES  meson.build
src/: gamjectfolder.gresource.xml  gamjectfolder.in  gjfGUI.glade  gjfGUI.glade~  main.py  makedbplan.py  makefolders.py  makereadme.py  meson.build
